fix: announcement message body not showing quote color
git-svn-id: https://win-lhoa5a3q3i7/svn/front-end-backup/trunk@3478 3f25d8b1-e65f-8d48-bd54-75b34d8be7f1

--- a/src/sass/import/_rtl.scss
+++ b/src/sass/import/_rtl.scss
@@ -203,7 +203,7 @@ html.rtl {
     }
   }
 
-  .ta-text-editor {
+  .ta-text-editor, #messageBody {
     blockquote {
       border-right: 5px solid #FF4081;
       border-left: 0;
